Override supportsFocus() for HTMLMediaElement. https://bugs.webkit.org/show_bug.cgi?id=67190

Patch by Deepak Sherveghar <bpwv64@motorola.com> on 2011-09-17
Reviewed by Antonio Gomes.

Source/WebCore:

Tests: fast/events/media-element-focus-tab.html
       fast/spatial-navigation/snav-media-elements.html

Return true from supportsFocus() if control's attribute is present or a tabindex is specified.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::supportsFocus):
* html/HTMLMediaElement.h:

LayoutTests:

For media elements be able to receive focus without tabindex if
control attribute is present, hence changed
tabindex-focus-blur-all.js and tabindex-focus-blur-all-expected.txt.

* fast/events/media-element-focus-tab-expected.txt: Added.
* fast/events/media-element-focus-tab.html: Added.
* fast/events/resources/tabindex-focus-blur-all.js:
(test):
* fast/events/tabindex-focus-blur-all-expected.txt:
* fast/spatial-navigation/snav-media-elements-expected.txt: Added.
* fast/spatial-navigation/snav-media-elements.html: Added.

Canonical link: https://commits.webkit.org/84250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95381 268f45cc-cd09-0410-ab3c-d52691b4dbfc