Source/WebCore/html/HTMLMediaElement.h
@@ -249,6 +249,7 @@ protected:
 private:
     void createMediaPlayer();
 
+    virtual bool supportsFocus() const;
     virtual void attributeChanged(Attribute*, bool preserveDecls);
     virtual bool rendererIsNeeded(const NodeRenderingContext&);
     virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
